@@ -7,110 +7,11 @@
 
 /* $Id$ */
 
-#include "../las.h"
+#include "../../las.h"
+#include "reg.h"
 #include <stdlib.h>
 #include <string.h>
 
-/*
- * x86-64 registers
- */
-typedef enum op_reg {
-    REG_UNKNOWN = -1,
-    /* AX */
-    REG_AL = 0,
-    REG_AH,
-    REG_AX,
-    REG_EAX,
-    REG_RAX,
-    /* CX */
-    REG_CL,
-    REG_CH,
-    REG_CX,
-    REG_ECX,
-    REG_RCX,
-    /* DX */
-    REG_DL,
-    REG_DH,
-    REG_DX,
-    REG_EDX,
-    REG_RDX,
-    /* BX */
-    REG_BL,
-    REG_BH,
-    REG_BX,
-    REG_EBX,
-    REG_RBX,
-    /* SP */
-    REG_SPL,
-    REG_SP,
-    REG_ESP,
-    REG_RSP,
-    /* BP */
-    REG_BPL,
-    REG_BP,
-    REG_EBP,
-    REG_RBP,
-    /* SI */
-    REG_SIL,
-    REG_SI,
-    REG_ESI,
-    REG_RSI,
-    /* DI */
-    REG_DIL,
-    REG_DI,
-    REG_EDI,
-    REG_RDI,
-    /* R8 */
-    REG_R8L,
-    REG_R8W,
-    REG_R8D,
-    REG_R8,
-    /* R9 */
-    REG_R9L,
-    REG_R9W,
-    REG_R9D,
-    REG_R9,
-    /* R10 */
-    REG_R10L,
-    REG_R10W,
-    REG_R10D,
-    REG_R10,
-    /* R11 */
-    REG_R11L,
-    REG_R11W,
-    REG_R11D,
-    REG_R11,
-    /* R12 */
-    REG_R12L,
-    REG_R12W,
-    REG_R12D,
-    REG_R12,
-    /* R13 */
-    REG_R13L,
-    REG_R13W,
-    REG_R13D,
-    REG_R13,
-    /* R14 */
-    REG_R14L,
-    REG_R14W,
-    REG_R14D,
-    REG_R14,
-    /* R15 */
-    REG_R15L,
-    REG_R15W,
-    REG_R15D,
-    REG_R15,
-    /* Segment registers */
-    REG_CS,
-    REG_DS,
-    REG_ES,
-    REG_FS,
-    REG_GS,
-    /* Flags */
-    REG_FLAGS,
-    REG_EFLAGS,
-    REG_RFLAGS,
-} x86_64_reg_t;
 
 /*
  * Pseudo instruction
@@ -161,172 +62,6 @@ typedef struct _operand_addr {
  */
 static val_t * _eval_expr(expr_t *);
 
-/*
- * Convert the register string to x86_64_reg_t
- */
-static x86_64_reg_t
-_strtoreg(const char *s)
-{
-    x86_64_reg_t reg;
-
-    if ( 0 == strcmp("al", s) ) {
-        reg = REG_AL;
-    } else if ( 0 == strcmp("ah", s) ) {
-        reg = REG_AH;
-    } else if ( 0 == strcmp("ax", s) ) {
-        reg = REG_AX;
-    } else if ( 0 == strcmp("eax", s) ) {
-        reg = REG_EAX;
-    } else if ( 0 == strcmp("rax", s) ) {
-        reg = REG_RAX;
-    } else if ( 0 == strcmp("cl", s) ) {
-        reg = REG_CL;
-    } else if ( 0 == strcmp("ch", s) ) {
-        reg = REG_CH;
-    } else if ( 0 == strcmp("cx", s) ) {
-        reg = REG_CX;
-    } else if ( 0 == strcmp("ecx", s) ) {
-        reg = REG_ECX;
-    } else if ( 0 == strcmp("rcx", s) ) {
-        reg = REG_RCX;
-    } else if ( 0 == strcmp("dl", s) ) {
-        reg = REG_DL;
-    } else if ( 0 == strcmp("dh", s) ) {
-        reg = REG_DH;
-    } else if ( 0 == strcmp("dx", s) ) {
-        reg = REG_DX;
-    } else if ( 0 == strcmp("edx", s) ) {
-        reg = REG_EDX;
-    } else if ( 0 == strcmp("rdx", s) ) {
-        reg = REG_RDX;
-    } else if ( 0 == strcmp("bl", s) ) {
-        reg = REG_BL;
-    } else if ( 0 == strcmp("bh", s) ) {
-        reg = REG_BH;
-    } else if ( 0 == strcmp("bx", s) ) {
-        reg = REG_BX;
-    } else if ( 0 == strcmp("ebx", s) ) {
-        reg = REG_EBX;
-    } else if ( 0 == strcmp("rbx", s) ) {
-        reg = REG_RBX;
-    } else if ( 0 == strcmp("spl", s) ) {
-        reg = REG_SPL;
-    } else if ( 0 == strcmp("sp", s) ) {
-        reg = REG_SP;
-    } else if ( 0 == strcmp("esp", s) ) {
-        reg = REG_ESP;
-    } else if ( 0 == strcmp("rsp", s) ) {
-        reg = REG_RSP;
-    } else if ( 0 == strcmp("bpl", s) ) {
-        reg = REG_BPL;
-    } else if ( 0 == strcmp("bp", s) ) {
-        reg = REG_BP;
-    } else if ( 0 == strcmp("ebp", s) ) {
-        reg = REG_EBP;
-    } else if ( 0 == strcmp("rbp", s) ) {
-        reg = REG_RBP;
-    } else if ( 0 == strcmp("sil", s) ) {
-        reg = REG_SIL;
-    } else if ( 0 == strcmp("si", s) ) {
-        reg = REG_SI;
-    } else if ( 0 == strcmp("esi", s) ) {
-        reg = REG_ESI;
-    } else if ( 0 == strcmp("rsi", s) ) {
-        reg = REG_RSI;
-    } else if ( 0 == strcmp("dil", s) ) {
-        reg = REG_DIL;
-    } else if ( 0 == strcmp("di", s) ) {
-        reg = REG_DI;
-    } else if ( 0 == strcmp("edi", s) ) {
-        reg = REG_EDI;
-    } else if ( 0 == strcmp("rdi", s) ) {
-        reg = REG_RDI;
-    } else if ( 0 == strcmp("r8l", s) ) {
-        reg = REG_R8L;
-    } else if ( 0 == strcmp("r8w", s) ) {
-        reg = REG_R8W;
-    } else if ( 0 == strcmp("r8d", s) ) {
-        reg = REG_R8D;
-    } else if ( 0 == strcmp("r8", s) ) {
-        reg = REG_R8;
-    } else if ( 0 == strcmp("r9l", s) ) {
-        reg = REG_R9L;
-    } else if ( 0 == strcmp("r9w", s) ) {
-        reg = REG_R9W;
-    } else if ( 0 == strcmp("r9d", s) ) {
-        reg = REG_R9D;
-    } else if ( 0 == strcmp("r9", s) ) {
-        reg = REG_R9;
-    } else if ( 0 == strcmp("r10l", s) ) {
-        reg = REG_R10L;
-    } else if ( 0 == strcmp("r10w", s) ) {
-        reg = REG_R10W;
-    } else if ( 0 == strcmp("r10d", s) ) {
-        reg = REG_R10D;
-    } else if ( 0 == strcmp("r10", s) ) {
-        reg = REG_R10;
-    } else if ( 0 == strcmp("r11l", s) ) {
-        reg = REG_R11L;
-    } else if ( 0 == strcmp("r11w", s) ) {
-        reg = REG_R11W;
-    } else if ( 0 == strcmp("r11d", s) ) {
-        reg = REG_R11D;
-    } else if ( 0 == strcmp("r11", s) ) {
-        reg = REG_R11;
-    } else if ( 0 == strcmp("r12l", s) ) {
-        reg = REG_R12L;
-    } else if ( 0 == strcmp("r12w", s) ) {
-        reg = REG_R12W;
-    } else if ( 0 == strcmp("r12d", s) ) {
-        reg = REG_R12D;
-    } else if ( 0 == strcmp("r12", s) ) {
-        reg = REG_R12;
-    } else if ( 0 == strcmp("r13l", s) ) {
-        reg = REG_R13L;
-    } else if ( 0 == strcmp("r13w", s) ) {
-        reg = REG_R13W;
-    } else if ( 0 == strcmp("r13d", s) ) {
-        reg = REG_R13D;
-    } else if ( 0 == strcmp("r13", s) ) {
-        reg = REG_R13;
-    } else if ( 0 == strcmp("r14l", s) ) {
-        reg = REG_R14L;
-    } else if ( 0 == strcmp("r14w", s) ) {
-        reg = REG_R14W;
-    } else if ( 0 == strcmp("r14d", s) ) {
-        reg = REG_R14D;
-    } else if ( 0 == strcmp("r14", s) ) {
-        reg = REG_R14;
-    } else if ( 0 == strcmp("r15l", s) ) {
-        reg = REG_R15L;
-    } else if ( 0 == strcmp("r15w", s) ) {
-        reg = REG_R15W;
-    } else if ( 0 == strcmp("r15d", s) ) {
-        reg = REG_R15D;
-    } else if ( 0 == strcmp("r15", s) ) {
-        reg = REG_R15;
-    } else if ( 0 == strcmp("cs", s) ) {
-        reg = REG_CS;
-    } else if ( 0 == strcmp("ds", s) ) {
-        reg = REG_DS;
-    } else if ( 0 == strcmp("es", s) ) {
-        reg = REG_ES;
-    } else if ( 0 == strcmp("fs", s) ) {
-        reg = REG_FS;
-    } else if ( 0 == strcmp("gs", s) ) {
-        reg = REG_GS;
-    } else if ( 0 == strcmp("flags", s) ) {
-        reg = REG_FLAGS;
-    } else if ( 0 == strcmp("eflags", s) ) {
-        reg = REG_EFLAGS;
-    } else if ( 0 == strcmp("rflags", s) ) {
-        reg = REG_RFLAGS;
-    } else {
-        reg = REG_UNKNOWN;
-    }
-
-    return reg;
-}
 
 /*
  * Evaluate var expression
@@ -336,7 +71,7 @@ _eval_expr_var(expr_t *expr)
 {
     x86_64_reg_t reg;
 
-    reg = _strtoreg(expr->u.var);
+    reg = strtoreg(expr->u.var);
     if ( REG_UNKNOWN == reg ) {
         /* Symbol */
     } else {
