@@ -1,3 +1,11 @@
+2013-11-26  Hirochika Asai  <asai@scyphus.co.jp>
+
+    * las/arch/x86_64/reg.c: Moved register-related functions from
+                             las/arch/x86_64/main.c
+    * las/arch/x86_64/reg.h: Moved register-related definitions from
+                             las/arch/x86_64/main.c
+
+
 2013-11-25  Hirochika Asai  <asai@scyphus.co.jp>
 
     * las/arch/x86_64/main.c: Moved from las/arch/x86_64.c
